--- a/app/views/developers/dashboard.html.erb
+++ b/app/views/developers/dashboard.html.erb
@@ -1,1 +1,7 @@
 <h1>Dashboard</h1>
+
+<%= link_to "Add Developer", new_developer_path %>
+
+<% @developers.each do |developer| %>
+  <%= link_to developer.id, developer_path(developer) %>
+<% end %>
