--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -1,3 +1,13 @@
+<% if @project.errors.any? %>
+    <strong><%= pluralize(@project.errors.count, "error") %> prohibited this project from being saved:</strong>
+
+    <ul>
+      <% @project.errors.full_messages.each do |message| %>
+        <li><%= message %></l1>
+      <% end %>
+    </ul>
+<% end %>
+
 <%= form_for @project do |f| %>
   <%= f.label :name %>
   <%= f.text_field :name %>
