--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -6,8 +6,8 @@
   <%= project.id %>
   <%= project.name %>
   <%= project.hours_worked %>
-  <%= project.overtime? %>
+  Overtime? <%= project.overtime? %>
   <%= link_to "Edit", edit_project_path(project) %>
-  <%= link_to "Delete", project, method: :delete %>
+  <%= link_to "Delete", project, method: :delete unless project.no_time_entries? %>
   <br>
 <% end %>
