Complete styling of all index views

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,7 +31,7 @@
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Developers <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="/developers">View Developers</a></li>
+            <li><a data-no-turbolink='true' href="/developers">View Developers</a></li>
             <li><a href="/developers/new">Add Developer</a></li>
           </ul>
         </li>
@@ -41,7 +41,7 @@
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Projects <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="/projects">View Projects</a></li>
+            <li><a data-no-turbolink='true' href="/projects">View Projects</a></li>
             <li><a href="/projects/new">Add Project</a></li>
           </ul>
         </li>
