--- a/app/views/developers/index.html.erb
+++ b/app/views/developers/index.html.erb
@@ -3,36 +3,40 @@
 <a href="/time_entries/new" class="btn btn-success col-sm-offset-5 col-sm-2 text-center">Add Developer</a>
 
 <div class="index-table-container">
-<table class="table table-striped table-hover ">
-  <thead>
-    <tr>
-      <th class="table-header">Developer</th>
-      <th class="table-header">Hours Worked This Week</th>
-      <th class="table-header">Projects</th>
-      <th class="table-header">Actions</th>
-    </tr>
-  </thead>
-  <tbody>
-    <% @developers.each do |developer| %>
-      <tr class="<%= 'warning' if developer.overtime? %> table-row">
-        <td class="table-cell"><%= developer.first_name %> <%= developer.last_name %></td>
-        <td class="table-cell"><%= developer.weekly_hours %></td>
-        <td class="table-cell"><%= developer.projects.count %></td>
-        <td>
-          <ul class="nav">
-            <li class="dropdown">
-              <a class="dropdown-toggle action-links-dropdown" id="button" data-toggle="dropdown" href="#" aria-expanded="false">
-                Actions <span class="caret"></span>
-              </a>
-              <ul class="dropdown-menu">
-                <li><a href="#"><%= link_to "Edit", edit_developer_path(developer) %></a></li>
-                <li><a href="#"><%= link_to "Delete", developer, method: :delete unless developer.no_time_entries? %></a></li>
-              </ul>
-            </li>
-          </ul>
-        </td>
+  <table class="table table-striped table-hover ">
+    <thead>
+      <tr>
+        <th class="col-md-2">Developer</th>
+        <th class="col-md-2">Hours This Week</th>
+        <th class="col-md-2">Projects</th>
+        <th class="col-md-2"> </th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
+    <tbody>
+      <% @developers.each do |developer| %>
+        <% if developer.overtime? %>
+          <tr class="warning" data-toggle="tooltip" title="Developer has worked overtime">
+        <% else %>
+          <tr>
+        <% end %>
+          <td class="table-cell"><%= developer.first_name %> <%= developer.last_name %></td>
+          <td class="table-cell"><%= developer.weekly_hours %></td>
+          <td class="table-cell"><%= developer.projects.count %></td>
+          <td>
+            <ul class="nav">
+              <li class="dropdown">
+                <a class="dropdown-toggle dropdown-link" id="button" data-toggle="dropdown" href="#" aria-expanded="false">
+                  Actions <span class="caret"></span>
+                </a>
+                <ul class="dropdown-menu">
+                  <li><a href="#"><%= link_to "Edit", edit_developer_path(developer) %></a></li>
+                  <li><a href="#"><%= link_to "Delete", developer, method: :delete unless developer.no_time_entries? %></a></li>
+                </ul>
+              </li>
+            </ul>
+          </td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
 </div>
