--- a/app/views/developers/_form.html.erb
+++ b/app/views/developers/_form.html.erb
@@ -1,19 +1,55 @@
-<%= form_for @developer do |f| %>
-  <%= f.label :email %>
-  <%= f.text_field :email %>
+<% if @developer.errors.any? %>
+    <strong><%= pluralize(@developer.errors.count, "error") %> prohibited this developer from being saved:</strong>
 
-  <%= f.label :password %>
-  <%= f.password_field :password %>
-
-  <%= f.label :password_confirmation %>
-  <%= f.password_field :password_confirmation %>
-
-  <%= f.label :first_name %>
-  <%= f.text_field :first_name %>
-
- <%= f.label :last_name %>
- <%= f.text_field :last_name %>
-
- <%= f.submit %>
-
+    <ul>
+      <% @developer.errors.full_messages.each do |message| %>
+        <li><%= message %></l1>
+      <% end %>
+    </ul>
 <% end %>
+
+<div class="form-container">
+  <%= form_for @developer do |f| %>
+    <form class="form-horizontal">
+      <fieldset>
+
+        <div class="row">
+          <div class="form-group col-lg-6">
+            <%= f.label :first_name, class: "col-lg-6 control-label" %>
+            <%= f.text_field :first_name, class: "form-control" %>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="form-group col-lg-6">
+            <%= f.label :last_name, class: "col-lg-6 control-label" %>
+            <%= f.text_field :last_name, class: "form-control" %>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="form-group col-lg-6">
+            <%= f.label :email, class: "col-lg-6 control-label" %>
+            <%= f.text_field :email, class: "form-control" %>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="form-group col-lg-6">
+            <%= f.label :password, class: "col-lg-6 control-label" %>
+            <%= f.password_field :password, class: "form-control" %>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="form-group col-lg-6">
+            <%= f.label :password_confirmation, class: "col-lg-6 control-label" %>
+            <%= f.password_field :password_confirmation, class: "form-control" %>
+          </div>
+        </div>
+
+       <%= f.submit class: "btn btn-primary"%>
+      </fieldset>
+    </form>
+  <% end %>
+</div>
