--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -57,15 +57,17 @@
         </li>
       </ul>
 
-      <ul class="nav navbar-nav navbar-right">
-        <li><a href="/logout" data-method="delete">Log Out</a></li>
-      </ul>
+      <% if current_user %>
+        <ul class="nav navbar-nav navbar-right">
+          <li><a href="/logout" data-method="delete">Log Out</a></li>
+        </ul>
+      <% end %>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
 
   <% if notice %>
-    <p id="notice"><%= notice %></p>
+    <p class="alert alert-dismissible alert-success" id="notice"><%= notice %></p>
   <% end %>
 
   <%= yield %>
