--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -8,13 +8,27 @@
     </ul>
 <% end %>
 
-<%= form_for @project do |f| %>
-  <%= f.label :name %>
-  <%= f.text_field :name %>
+<div class="form-container">
+  <%= form_for @project do |f| %>
+    <form class="form-horizontal">
+      <fieldset>
 
-  <%= f.label :max_allowed_hours %>
-  <%= f.text_field :max_allowed_hours %>
+        <div class="row">
+          <div class="form-group col-lg-6">
+            <%= f.label :name, class: "col-lg-6 control-label" %>
+            <%= f.text_field :name, class: "form-control" %>
+          </div>
+        </div>
 
- <%= f.submit %>
+        <div class="row">
+          <div class="form-group col-lg-6">
+            <%= f.label :max_allowed_hours, class: "col-lg-6 control-label" %>
+            <%= f.text_field :max_allowed_hours, class: "form-control" %>
+          </div>
+        </div>
 
-<% end %>
+       <%= f.submit, class: "btn btn-primary" %>
+      </fieldset>
+    </form>
+  <% end %>
+</div>
