--- a/app/views/time_entries/new.html.erb
+++ b/app/views/time_entries/new.html.erb
@@ -1,3 +1,3 @@
-<legend class="aligned-legend">Edit Time Entry</legend>
+<legend class="aligned-legend">Add Time Entry</legend>
 
 <%= render 'form' %>
