--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -1,14 +1,18 @@
-<% if @project.errors.any? %>
-    <strong><%= pluralize(@project.errors.count, "error") %> prohibited this project from being saved:</strong>
-
-    <ul>
-      <% @project.errors.full_messages.each do |message| %>
-        <li><%= message %></l1>
-      <% end %>
-    </ul>
-<% end %>
-
 <div class="form-container">
+  <% if @project.errors.any? %>
+    <div class="row">
+      <div class="alert alert-dismissible alert-warning col-lg-6">
+        <strong><%= pluralize(@project.errors.count, "error") %> prohibited this project from being saved:</strong>
+
+        <ul>
+          <% @project.errors.full_messages.each do |message| %>
+            <li><%= message %></l1>
+          <% end %>
+        </ul>
+      </div>
+    </div>
+  <% end %>
+
   <%= form_for @project do |f| %>
     <form class="form-horizontal">
       <fieldset>
@@ -27,7 +31,7 @@
           </div>
         </div>
 
-       <%= f.submit, class: "btn btn-primary" %>
+       <%= f.submit class: "btn btn-primary" %>
       </fieldset>
     </form>
   <% end %>
