Require duration on time entries

--- a/app/views/time_entries/index.html.erb
+++ b/app/views/time_entries/index.html.erb
@@ -1,6 +1,6 @@
-<h1 class="centered-headline">Time Entries</h1>
+<h1 class="centered-headline">Your Time Entries</h1>
 
-<a href="/projects/new" class="btn btn-success col-sm-offset-5 col-sm-2 text-center">Add Time Entry</a>
+<a href="/time_entries/new" class="btn btn-success col-sm-offset-5 col-sm-2 text-center">Add Time Entry</a>
 
 <div class="index-table-container">
   <table class="table table-striped table-hover ">
