--- a/app/views/time_entries/_form.html.erb
+++ b/app/views/time_entries/_form.html.erb
@@ -26,6 +26,13 @@
 
         <div class="row">
           <div class="form-group col-lg-6">
+            <%= f.label :duration, class: "col-lg-6 control-label" %>
+            <%= f.text_field :duration, class: "form-control" %>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="form-group col-lg-6">
             <%= f.label :project %><br>
                 <%= f.select(
                   :project_id,
